WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31489
DOMHTMLSelectElement is missing some implementation
https://bugs.webkit.org/show_bug.cgi?id=31489
Summary
DOMHTMLSelectElement is missing some implementation
Jon Honeycutt
Reported
2009-11-13 13:57:09 PST
DOMHTMLSelectElement::options() and DOMHTMLSelectElement::activateItemAtIndex() are stubs.
Attachments
patch
(3.38 KB, patch)
2009-11-13 14:15 PST
,
Jon Honeycutt
mitz: review+
jhoneycutt
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jon Honeycutt
Comment 1
2009-11-13 14:15:55 PST
Created
attachment 43200
[details]
patch
mitz
Comment 2
2009-11-13 15:04:34 PST
Comment on
attachment 43200
[details]
patch
> + ASSERT(m_element && m_element->hasTagName(selectTag));
Please split this assertion into two separate assertions.
> + ASSERT(m_element && m_element->hasTagName(selectTag));
Ditto.
Jon Honeycutt
Comment 3
2009-11-17 15:40:18 PST
I made Dan's change. Landed in
r51092
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug