DOMHTMLSelectElement is missing some implementation.

https://bugs.webkit.org/show_bug.cgi?id=31489

Reviewed by Dan Bernstein.

* DOMHTMLClasses.cpp:
(DOMHTMLSelectElement::options):
Cast m_element to an HTMLSelectElement. If it has no options, return
E_FAIL. Otherwise, create a DOMHTMLOptionsCollection to wrap the
options, and return it.
(DOMHTMLSelectElement::activateItemAtIndex):
If the index is out of bounds, return E_FAIL. Otherwise, select the
item.

Canonical link: https://commits.webkit.org/42521@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51092 268f45cc-cd09-0410-ab3c-d52691b4dbfc